--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
 	<div class="splash">
-		<h1>CHARTizard</h1>
+		<div class="headerBoxContainer">
+			<div class="headerBox">
+				<h1>CHARTizard</h1>
+			</div>
+		</div>
 	</div>
 	<div class="scatterDiv"></div>
 	<!-- <div class="scatterDiv2"></div> -->
