Add stroke to points and misc
Remove unnecessary CSS lines
Make small changes to CSS of splash page
Make scatterSVG background-color white
Make rects white
Make set of linearGradients for darkened strokes
Define hslDarken()
	-Takes an hsl color and darkens it by 4%
	-Returns darkened hsl color
Move grid above regression line and point creation
Make regression line same color as h1 on splash page
Add strokes to enterDots()

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,29 +12,19 @@ body {
 
 .headerBox {
     background-color: white;
-    /* height: 136px; */
     width: 800px;
     margin: 0 auto;
 }
 
 h1 {
-    color: black;
+    color: #e44040;
     font-size: 120px;
     text-align: center;
     margin: 0;
     padding: 5px;
-    /* padding-top: 239px; */
-    /* padding-top: 30vh; */
-    /* text-shadow: 1px 0px black, -1px 0px black, 0px 1px black, 0px -1px black; */
 }
 
 .splash {
-    /* background-image: url(../img/splash.png);
-    background-color: white;
-    background-size: cover;
-    height: 100vh;
-    width: 100vw;
-    margin: 0; */
     background-image: url(../img/splash.png);
     background-color: white;
     background-size: cover;
