--- a/templates/typeColors.html
+++ b/templates/typeColors.html
@@ -1,22 +1,22 @@
 <script>
 let typeColors = {
-	"bug": "#A8B820",
-	"dark": "#705848",
-	"dragon": "#7038F8",
-	"electric": "#F8D030",
-	"fairy": "#EE99AC",
-	"fighting": "#C03028",
-	"fire": "#F08030",
-	"flying": "#A890F0",
-	"ghost": "#705898",
-	"grass": "#78C850",
-	"ground": "#E0C068",
-	"ice": "#98D8D8",
-	"normal": "#A8A878",
-	"poison": "#A040A0",
-	"psychic": "#F85888",
-	"rock": "#B8A038",
-	"steel": "#B8B8D0",
-	"water": "#6890F0",
+	"bug": "hsl(66.3,70.4%,42.4%)",
+	"dark": "hsl(24,21.7%,36.1%)",
+	"dragon": "hsl(257.5,93.2%,59.6%)",
+	"electric": "hsl(48,93.5%,58%)",
+	"fairy": "hsl(346.6,71.4%,76.7%)",
+	"fighting": "hsl(3.2,65.5%,45.5%)",
+	"fire": "hsl(25,86.5%,56.5%)",
+	"flying": "hsl(255,76.2%,75.3%)",
+	"ghost": "hsl(262.5,26.7%,47.1%)",
+	"grass": "hsl(100,52.2%,54.9%)",
+	"ground": "hsl(44,65.9%,64.3%)",
+	"ice": "hsl(180,45.1%,72.2%)",
+	"normal": "hsl(60,21.6%,56.5%)",
+	"poison": "hsl(300,42.9%,43.9%)",
+	"psychic": "hsl(342,92%,65.9%)",
+	"rock": "hsl(48.8,53.3%,47.1%)",
+	"steel": "hsl(240,20.3%,76.9%)",
+	"water": "hsl(222.4,81.9%,67.5%)",
 }
 </script>
