--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CHARTizard</title>
 	<link rel="stylesheet" href="../static/css/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Archivo+Black|Roboto:400,700&display=swap" rel="stylesheet">
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src='https://unpkg.com/simple-statistics@7.0.8/dist/simple-statistics.min.js'></script>
 </head>
 <body>
 	<div class="splash">
+		<div class="backgroundImg"></div>
 		<div class="headerBoxContainer">
 			<div class="headerBox">
 				<h1>CHARTizard</h1>
 			</div>
 		</div>
+		<i class="arrow down"></i>
 	</div>
 	<div class="scatterDiv"></div>
 	<!-- <div class="scatterDiv2"></div> -->
