--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 html {
     background-color: white;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -12,7 +13,7 @@ body {
 
 .headerBox {
     background-color: white;
-    width: 800px;
+    max-width: 800px;
     margin: 0 auto;
 }
 
@@ -22,6 +23,29 @@ h1 {
     margin: 0 auto;
     padding-top: 5px;
     padding-bottom: 5px;
+}
+@media (max-width: 800px) {
+    h1 {
+        font-size: 80px;
+    }
+}
+@media (max-width: 500px) {
+    h1 {
+        font-size: 60px;
+    }
+}
+@media (max-width: 350px) {
+    h1 {
+        font-size: 40px;
+    }
+}
+@media (max-width: 250px) {
+    h1 {
+        font-size: 20px;
+    }
+}
+
+.headerh1 {
     background-image: linear-gradient(to right, rgb(123, 171, 175), rgb(204, 70, 159) 12%, rgb(180, 20, 20) 16%, rgb(212, 119, 37) 23%, rgb(114, 112, 76) 32%, rgb(205, 185, 10) 40%, rgb(9, 141, 20) 48%, rgb(143, 157, 216) 56%, rgb(59, 65, 186) 70%, rgb(117, 29, 140) 78%, rgb(134, 131, 131) 92%, rgb(34, 29, 0));
     color: transparent;
     -webkit-background-clip: text;
@@ -46,17 +70,27 @@ h1 {
     opacity: 0.65
 }
 
-i {
+.toSecondPage {
+    left: 48%;
+    bottom: 56px;
+    margin-bottom: -38px;
+    width: 68px;
+    height: 68px;
     border: solid black;
     border-width: 9px 9px 0px 0;
 }
 
-.down {
-    width: 68px;
-    height: 68px;
-    position: absolute;
-    bottom: 56px;
+.toFooter {
+    bottom: -100vh;
     left: 48%;
+    width: 35px;
+    height: 35px;
+    border: solid #474747;
+    border-width: 4px 4px 0px 0;
+}
+
+.down {
+    position: absolute;
     transform: rotate(157deg) skewX(45deg) scaleY(0.7);
     -webkit-transform: rotate(157deg) skewX(45deg) scaleY(0.7);
     box-shadow: 8px -8px white;
@@ -88,4 +122,12 @@ i {
 
 svg {
     max-height: 100vh;
+}
+
+footer {
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    color: white;
+    text-align: center;
 }
