--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,15 @@
 		<div class="backgroundImg"></div>
 		<div class="headerBoxContainer">
 			<div class="headerBox">
-				<h1>CHARTizard</h1>
+				<h1 class="headerh1">CHARTizard</h1>
 			</div>
 		</div>
-		<i class="arrow down"></i>
+		<a href="#scatterDiv"><i class="arrow down toSecondPage"></i></a>
 	</div>
-	<div class="scatterDiv"></div>
+	<div class="secondPage">
+		<div class="scatterDiv" id="scatterDiv"></div>
+		<a href="#footer"><i class="arrow down toFooter"></i></a>
+	</div>
 	<!-- <div class="scatterDiv2"></div> -->
     <!-- <p>{{data.name[0]}}</p>
     <p>{{data.capture_rate[0]}}</p>
@@ -41,6 +44,9 @@
     <!-- {% include "tester.html" %} -->
 
     <!-- <div id="my_dataviz"></div> -->
-    <!-- <script src="../static/js/test.js"></script> -->
+	<!-- <script src="../static/js/test.js"></script> -->
+	<footer id="footer">
+		<h1 class="footerh1">FOOTER</h1>
+	</footer>
 </body>
 </html>
