--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,9 @@
 	<!-- <script src="../static/js/test.js"></script> -->
 	<footer id="footer">
 		<h1 class="footerh1">FOOTER</h1>
+		<div class="imgContainer">
+			<img src="../static/img/footerImg.png" class="footerImg">
+		</div>
 	</footer>
 </body>
 </html>
