--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,8 @@
 
 	{% include "responsify.html" %}
     
-	{% include "scatterplot.html" %}
+	{% include "scatterplotInitial.html" %}
+	{% include "scatterplotCSV.html" %}
 	
     <!-- {% include "scatterplot2.html" %} -->
 
